# yolov8_segment

./: README.MD  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: yolov8_segment.launch.py
yolov8_segment/: yolov8_segment.py  yolov8_segment_model.py
