<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_segment</name>
  <version>1.0.0</version>
  <description>ROS2 node for YOLOv8 segment detection</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <depend>builtin_interfaces</depend>

  <!-- 添加消息生成依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>bytetracker</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
    <rosidl_generator>rosidl_generator_py</rosidl_generator>
  </export>
</package>
